<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navi_home">

    <fragment
        android:id="@+id/navi_home"
        android:name="com.niccher.my_mpesa_analyzer.fragments.Home.Frag_Home"
        android:label="@string/title_home"
        tools:layout="@layout/frag_home" />

    <fragment
        android:id="@+id/navi_graph"
        android:name="com.niccher.my_mpesa_analyzer.fragments.Graph.Frag_Graph"
        android:label="@string/title_graph"
        tools:layout="@layout/frag_graph" />

    <fragment
        android:id="@+id/navi_transactions"
        android:name="com.niccher.my_mpesa_analyzer.fragments.History.Frag_Transactions"
        android:label="Search"
        tools:layout="@layout/frag_transactions" />

    <fragment
        android:id="@+id/navi_history"
        android:name="com.niccher.my_mpesa_analyzer.fragments.History.Frag_History"
        android:label="@string/title_history"
        tools:layout="@layout/frag_history" />

    <fragment
        android:id="@+id/navi_app_info"
        android:name="com.niccher.my_mpesa_analyzer.fragments.Info.Frag_App_Info"
        android:label="App Info"
        tools:layout="@layout/frag_app_info" />

    <fragment
        android:id="@+id/navi_app_credits"
        android:name="com.niccher.my_mpesa_analyzer.fragments.Info.Frag_App_Credits"
        android:label="App Credits"
        tools:layout="@layout/frag_app_credits" />

    <fragment
        android:id="@+id/navi_settings"
        android:name="com.niccher.my_mpesa_analyzer.fragments.Settings.Frag_Settings"
        android:label="Settings"
        tools:layout="@layout/frag_settings" />

    <fragment
        android:id="@+id/navi_profile"
        android:name="com.niccher.my_mpesa_analyzer.fragments.Profile.Frag_Profile"
        android:label="Profile"
        tools:layout="@layout/frag_profile" />

</navigation>